<resources>
    <string name="app_name">PopDone</string>
    <string name="main_activity_name">All Tasks</string>
    <string name="add_task_activity_name">Fill all the details</string>

    <!-- Strings for MainActivity -->
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>

    <!-- Strings for AddTaskActivity -->
    <!-- This etaskEntrytask has a unicode character for "..." = "&#8230;" -->
    <string name="edit_task_description">Give Back that item to him</string>
    <string name="Name1">Enter your Name</string>
    <string name="Name2">Enter their Name  </string>
    <string name="Product_details">Product description</string>
    <string name="Mobile_number">Mobile Number</string>
    <string name="Time">Time in Hrs</string>
    <string name="priority_string">Priority</string>

    <string name="high_priority">High</string>
    <string name="med_priority">Medium</string>
    <string name="low_priority">Low</string>

    <string name="add_button">Add</string>
    <string name="update_button">Update</string>
    <string name="fillAllDetails">Please Fill All Required Details</string>
    <string name="returnPlease">Please Return</string>
    <string name="to">" to "</string>
    <string name="messageSent">Message Sent !</string>
    <string name="reminderService">Reminder Service</string>
    <string name="reminder">reminder</string>
    <string name="take">Take </string>
    <string name="from">from </string>
    <string name="enterProductName">Please enter Product name</string>
    <string name="enterName">Please enter your name</string>
    <string name="enterRecieverName">Please enter receiver\'s name</string>
    <string name="enterMobileNumber">Please enter their Mobile Number(10 Digit)</string>
    <string name="enterDuration">Please enter Duration</string>
</resources>
